# water-sort-puzzle-solver

./: Cargo.toml  LICENSE  README.md
benches/: bfs.rs  dfs.rs
src/: bfs_solver.rs  dfs_solver.rs  lib.rs  main.rs  solver.rs
src/cli/: analyze.rs  mod.rs  solve.rs
src/solver/: base.rs  bfs_solver.rs  dfs_solver.rs  mod.rs  utils.rs
