[package]
name = "water_sort_puzzle_solver"
version = "0.1.0"
authors = ["Xuan Yan <xuanyan@xuanyan.ws>"]
edition = "2021"

[dependencies]
clap = "2.33.3"
itertools = "0.10.5"
rand = "0.8.2"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bfs"
harness = false

[[bench]]
name = "dfs"
harness = false
