[package]
name = "water_sort_puzzle_solver"
version = "0.1.0"
authors = ["Xuan Yan <xuanyan@xuanyan.ws>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.39", "features" = ["derive"] }
itertools = "0.14.0"
rand = "0.9.1"
rustc-hash = "2.1.1"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bfs"
harness = false

[[bench]]
name = "dfs"
harness = false
